// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadDropzone should open files selection dialog 1`] = `
<FileUploadDropzone
  clearErrors={false}
  locale={
    Object {
      "errorTitle": "Upload Errors",
      "fileUploadInstruction": <p>
        Click here to select files, or drag files into this area to upload
      </p>,
      "fileUploadRestrictionHeading": <h3>
        File upload restrictions
      </h3>,
      "fileUploadRestrictions": <div>
        Please ensure your files:
        <ul>
          <li>
            begin with a letter and are less than 45 characters long
          </li>
          <li>
            contain only upper and lowercase alphanumeric characters, and underscores
          </li>
          <li>
            have only a single period which precedes the file extension: “.pdf”
          </li>
          <li>
            are uploaded individually and not inside a folder
          </li>
        </ul>
      </div>,
      "validation": Object {
        "fileName": "File(s) ([filenames]) have invalid file name",
        "folder": "Invalid files ([filenames])",
        "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
        "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
      },
    }
  }
  maxFiles={5}
  maxSize={1000}
  onDropped={[MockFunction]}
  uploadedFiles={Array []}
>
  <div>
    <div
      className="columns"
    >
      <div
        className="column"
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <t
          disableClick={false}
          disablePreview={true}
          disabled={false}
          maxSize={1000}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          preventDropOnDocument={true}
          style={
            Object {
              "padding": "0px",
            }
          }
        >
          <div
            aria-disabled={false}
            className=""
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "padding": "0px",
              }
            }
          >
            <FileUploadDropzoneStaticContent
              txt={
                Object {
                  "errorTitle": "Upload Errors",
                  "fileUploadInstruction": <p>
                    Click here to select files, or drag files into this area to upload
                  </p>,
                  "fileUploadRestrictionHeading": <h3>
                    File upload restrictions
                  </h3>,
                  "fileUploadRestrictions": <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>,
                  "validation": Object {
                    "fileName": "File(s) ([filenames]) have invalid file name",
                    "folder": "Invalid files ([filenames])",
                    "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
                    "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
                  },
                }
              }
            >
              <div
                className="columns file-instructions"
              >
                <div
                  className="column"
                >
                  <h3>
                    File upload restrictions
                  </h3>
                  <div>
                    Please ensure your files:
                    <ul>
                      <li>
                        begin with a letter and are less than 45 characters long
                      </li>
                      <li>
                        contain only upper and lowercase alphanumeric characters, and underscores
                      </li>
                      <li>
                        have only a single period which precedes the file extension: “.pdf”
                      </li>
                      <li>
                        are uploaded individually and not inside a folder
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  className="column upload-instructions"
                >
                  <FontIcon
                    className="material-icons"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="material-icons"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fontSize": 24,
                          "muiPrepared": true,
                          "position": "relative",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                        }
                      }
                    >
                      cloud_upload
                    </span>
                  </FontIcon>
                  <p>
                    Click here to select files, or drag files into this area to upload
                  </p>
                </div>
              </div>
            </FileUploadDropzoneStaticContent>
            <input
              autoComplete="off"
              disabled={false}
              multiple={true}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </t>
      </div>
    </div>
  </div>
</FileUploadDropzone>
`;

exports[`Component FileUploadDropzone should render correctly without any setup 1`] = `
<div>
  <div
    className="columns"
  >
    <div
      className="column"
      onKeyPress={[Function]}
      tabIndex="0"
    >
      <t
        disableClick={false}
        disablePreview={true}
        disabled={false}
        maxSize={1000}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        preventDropOnDocument={true}
        style={
          Object {
            "padding": "0px",
          }
        }
      >
        <FileUploadDropzoneStaticContent
          txt={
            Object {
              "errorTitle": "Upload Errors",
              "fileUploadInstruction": <p>
                Click here to select files, or drag files into this area to upload
              </p>,
              "fileUploadRestrictionHeading": <h3>
                File upload restrictions
              </h3>,
              "fileUploadRestrictions": <div>
                Please ensure your files:
                <ul>
                  <li>
                    begin with a letter and are less than 45 characters long
                  </li>
                  <li>
                    contain only upper and lowercase alphanumeric characters, and underscores
                  </li>
                  <li>
                    have only a single period which precedes the file extension: “.pdf”
                  </li>
                  <li>
                    are uploaded individually and not inside a folder
                  </li>
                </ul>
              </div>,
              "validation": Object {
                "fileName": "File(s) ([filenames]) have invalid file name",
                "folder": "Invalid files ([filenames])",
                "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
                "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
              },
            }
          }
        />
      </t>
    </div>
  </div>
</div>
`;

exports[`Component FileUploadDropzone should render files discarding folders 1`] = `
<div>
  <div
    className="columns"
  >
    <div
      className="column"
      onKeyPress={[Function]}
      tabIndex="0"
    >
      <t
        disableClick={false}
        disablePreview={true}
        disabled={false}
        maxSize={1000}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        preventDropOnDocument={true}
        style={
          Object {
            "padding": "0px",
          }
        }
      >
        <FileUploadDropzoneStaticContent
          txt={
            Object {
              "errorTitle": "Upload Errors",
              "fileUploadInstruction": <p>
                Click here to select files, or drag files into this area to upload
              </p>,
              "fileUploadRestrictionHeading": <h3>
                File upload restrictions
              </h3>,
              "fileUploadRestrictions": <div>
                Please ensure your files:
                <ul>
                  <li>
                    begin with a letter and are less than 45 characters long
                  </li>
                  <li>
                    contain only upper and lowercase alphanumeric characters, and underscores
                  </li>
                  <li>
                    have only a single period which precedes the file extension: “.pdf”
                  </li>
                  <li>
                    are uploaded individually and not inside a folder
                  </li>
                </ul>
              </div>,
              "validation": Object {
                "fileName": "File(s) ([filenames]) have invalid file name",
                "folder": "Invalid files ([filenames])",
                "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
                "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
              },
            }
          }
        />
      </t>
    </div>
  </div>
</div>
`;

exports[`Component FileUploadDropzone should render files discarding folders 2`] = `
<div>
  <div
    className="columns"
  >
    <div
      className="column"
      onKeyPress={[Function]}
      tabIndex="0"
    >
      <t
        disableClick={false}
        disablePreview={true}
        disabled={false}
        maxSize={1000}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        preventDropOnDocument={true}
        style={
          Object {
            "padding": "0px",
          }
        }
      >
        <FileUploadDropzoneStaticContent
          txt={
            Object {
              "errorTitle": "Upload Errors",
              "fileUploadInstruction": <p>
                Click here to select files, or drag files into this area to upload
              </p>,
              "fileUploadRestrictionHeading": <h3>
                File upload restrictions
              </h3>,
              "fileUploadRestrictions": <div>
                Please ensure your files:
                <ul>
                  <li>
                    begin with a letter and are less than 45 characters long
                  </li>
                  <li>
                    contain only upper and lowercase alphanumeric characters, and underscores
                  </li>
                  <li>
                    have only a single period which precedes the file extension: “.pdf”
                  </li>
                  <li>
                    are uploaded individually and not inside a folder
                  </li>
                </ul>
              </div>,
              "validation": Object {
                "fileName": "File(s) ([filenames]) have invalid file name",
                "folder": "Invalid files ([filenames])",
                "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
                "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
              },
            }
          }
        />
      </t>
    </div>
  </div>
  <Alert
    allowDismiss={false}
    message="Invalid files (test); File(s) (a.text.txt, web_a.txt, WEB_b.txt, Web_c.txt) have invalid file name"
    title="Upload Errors"
    type="error"
  />
</div>
`;

exports[`Component FileUploadDropzone should render row for uploaded files 1`] = `
<div>
  <div
    className="columns"
  >
    <div
      className="column"
      onKeyPress={[Function]}
      tabIndex="0"
    >
      <t
        disableClick={false}
        disablePreview={true}
        disabled={false}
        maxSize={1000}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        preventDropOnDocument={true}
        style={
          Object {
            "padding": "0px",
          }
        }
      >
        <FileUploadDropzoneStaticContent
          txt={
            Object {
              "errorTitle": "Upload Errors",
              "fileUploadInstruction": <p>
                Click here to select files, or drag files into this area to upload
              </p>,
              "fileUploadRestrictionHeading": <h3>
                File upload restrictions
              </h3>,
              "fileUploadRestrictions": <div>
                Please ensure your files:
                <ul>
                  <li>
                    begin with a letter and are less than 45 characters long
                  </li>
                  <li>
                    contain only upper and lowercase alphanumeric characters, and underscores
                  </li>
                  <li>
                    have only a single period which precedes the file extension: “.pdf”
                  </li>
                  <li>
                    are uploaded individually and not inside a folder
                  </li>
                </ul>
              </div>,
              "validation": Object {
                "fileName": "File(s) ([filenames]) have invalid file name",
                "folder": "Invalid files ([filenames])",
                "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
                "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
              },
            }
          }
        />
      </t>
    </div>
  </div>
</div>
`;
